Fixed alert z-index and positioning

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -259,12 +259,10 @@ header .nav-link {
 }
 
 #messages {
-    position: fixed;
+    position: relative;
     width: 90%;
-    left: 5%;
-    top: 60px;
-    z-index: 9000;
     padding: 0;
+    margin-top: 65px;
 }
 
 .about {
